Fixed: header on smaller devices

--- a/client/app/views/styles/_main.styl
+++ b/client/app/views/styles/_main.styl
@@ -161,26 +161,26 @@ input#search-box
 // Menu
 
 div#affixbar
-    height: 45px
-    z-index: 100
-    width: 100%
-    position: fixed
+    height 45px
+    z-index 100
+    width 100%
+    position fixed
 
     .row
-        background-color: white
+        background-color white
 
         p
-            margin-bottom: 5px
+            margin-bottom 5px
 
         &:first-of-type
-            padding-top: 15px
+            padding-top 15px
 
     a.btn
-        height: 35px
+        height 35px
 
     img
-        height: 20px
-        color: #C60
+        height 20px
+        color #C60
 
 .affix-top
     color: blue
@@ -195,7 +195,7 @@ div#affixbar
         box-shadow:                 0 5px 7px 0 rgba(0,0,0,0.2);
 
 #crumbs
-    Overflow: hidden
+    overflow hidden
 
     img
         height: 25px
@@ -273,15 +273,14 @@ div#affixbar
             line-height: 20px
 
     #folder-state
-        font-family: styled
-        font-size: 20px
-        margin-right: 20px
-        position: relative
-        top: 5px
-        color: #666
+        font-family styled
+        font-size 20px
+        position relative
+        top 5px
+        color #666
 
-        .fa
-                margin-right: 10px
+        span.text
+            margin-right 10px
 
     // by default (private area) we don't display download and notif buttons
     #notifications
@@ -542,7 +541,7 @@ tr.folder-row
         .tags input
             visibility: visible
 
-    &.edit-mode 
+    &.edit-mode
         .tags
                 display: none
 
@@ -775,11 +774,11 @@ tr.folder-row td span.caption.caption-edit margin: 0
         &:active
         &:focus
             border: 1px solid blue
-     
+
 tr.folder-row td input.caption
     margin-left: 5px
     margin-top: 2px
-         
+
 .file-edit-save
 .file-edit-cancel
     margin-top: 0px
