--- a/client/app/views/styles/_responsive.styl
+++ b/client/app/views/styles/_responsive.styl
@@ -5,30 +5,33 @@
         text-rendering optimizeSpeed
 
     #content
-        padding-top: 0px
+        padding-top 50px
 
     .table-headers
-        display: none
+        display none
 
     tr.folder-row .caption
-        font-size: 14px
+        font-size 14px
 
     #search-box
-        width: 100%
-        max-width: 185px
+        width 100%
+        max-width 150px
 
     #affixbar
         .pull-right
-            display: none
+            display block
 
         #upload-buttons
             a
-                display: none
+                display inline-block
+            .btn
+                padding 6px 4px
 
     #crumbs
         li
             a
                 padding: 5px
+
 
     .modal-dialog
         max-width: 100%
@@ -71,7 +74,7 @@
         white-space: normal
         text-align: left
 
-    #crumbs 
+    #crumbs
         ul
             li
                 display: none
@@ -79,11 +82,6 @@
             li:first-child
             li:last-child
                 display: inline
-
-    #affixbar
-        #upload-buttons
-            a
-                display: none
 
 @media (max-width: 900px)
     tr.folder-row
